--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,21 @@ jobs:
         run: |
           go build -o my-app
 
+      - name: Verify my-app binary
+        run: |
+          ls -la my-app
+
+      - name: Add server to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "$KNOWN_HOST" > ~/.ssh/known_hosts
+
       - name: Copy application to server
         env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}  # Use EC2_HOST instead of SERVER_PUBLIC_IP
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}  # Use EC2_SSH_KEY instead of SSH_PRIVATE_KEY
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
+          set -e
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
@@ -45,7 +55,19 @@ jobs:
 
       - name: Run the application on the server
         env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}  # Use EC2_HOST instead of SERVER_PUBLIC_IP
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}  # Use EC2_SSH_KEY instead of SSH_PRIVATE_KEY
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
+          set -e
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$EC2_HOST "chmod +x /home/ubuntu/my-app && nohup /home/ubuntu/my-app &"
+
+      - name: Check application logs
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$EC2_HOST "cat nohup.out"
+
+      - name: Cleanup SSH key
+        run: |
+          rm -f ~/.ssh/id_rsa
